Added the ability to create users

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -8,13 +8,7 @@
     <h4>Resources</h4>
     <ul>
       <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="http://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
+        <%= link "Register New User", to: user_path(@conn, :new)%>
       </li>
     </ul>
   </div>
