--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -1,23 +1,6 @@
-<h2>Show post</h2>
-
-<ul>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @post.title %>
-  </li>
-
-  <li>
-    <strong>Body:</strong>
-    <%= @post.body %>
-  </li>
-
-  <li>
-    <strong>Likes:</strong>
-    <%= @post.likes %>
-  </li>
-
-</ul>
-
-<%= link "Edit", to: post_path(@conn, :edit, @post) %>
+<h1><strong><%= @post.title %></strong></h1>
+<hr/>
+<%= @post.body %>
+<br/>
+<br/>
 <%= link "Back", to: post_path(@conn, :index) %>
